ignore gpt plugin so I can develop without losing it

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ plugins/**/__pycache__/
 plugins/gpt-config.yml
 meshlinkvenv/
 .venv/
+plugins/gpt-config-example.yml
+plugins-disabled/gpt-config-example.yml
+plugins/gpt.py
