--- a/config-example.yml
+++ b/config-example.yml
@@ -5,7 +5,6 @@ rev: 22 # increment after update!
 ignore_update_prompt: False # set this to True if you do not want to answer y/n every time there is an update (set to True if using auto restart/startup)
 check_for_updates: True # set to False to disable update checking
 
-
 ### DISCORD SETTINGS
 use_discord: True
 max_message_length: 200 # max discord -> mesh message length and info message length
@@ -26,6 +25,7 @@ radio_ip: "192.168.1.100" # ip of the radio if using tcp
 send_channel_index: 0 # the index of the channel to send messages on 
 verbose_packets: False # should the full packet data be shown in the console
 send_start_stop: True # should the meshlink announcement be sent on connection and shut down
+include_username_prefix: True # include the username prefix in mesh messages from discord
 
 
 ### BUILT IN PLUGINS
