Introduced a permit_broadcast_of_discord_messages config option.
When set to false it prevents users in Discord from having messages sent with the discord_prefix broadcasted by the node.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ plugins/**/__pycache__/
 plugins/gpt-config.yml
 meshlinkvenv/
 .venv/
+mise.toml
 plugins/gpt-config-example.yml
 plugins-disabled/gpt-config-example.yml
 plugins/gpt.py
